d06: ex00 - ex02 done

--- a/d06/ex01/Makefile
+++ b/d06/ex01/Makefile
@@ -6,12 +6,12 @@
 #    By: Ulliwy <Ulliwy@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/01/08 14:57:28 by iprokofy          #+#    #+#              #
-#    Updated: 2018/01/16 22:00:56 by Ulliwy           ###   ########.fr        #
+#    Updated: 2018/01/16 22:00:51 by Ulliwy           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 SRC = main.cpp
-NAME = convert
+NAME = serialize
 FLAGS = -Wall -Wextra -Werror
 
 all: $(NAME)
