--- a/d06/ex02/Makefile
+++ b/d06/ex02/Makefile
@@ -6,13 +6,13 @@
 #    By: Ulliwy <Ulliwy@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/01/08 14:57:28 by iprokofy          #+#    #+#              #
-#    Updated: 2018/01/16 22:00:56 by Ulliwy           ###   ########.fr        #
+#    Updated: 2018/01/16 22:01:16 by Ulliwy           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRC = main.cpp
-NAME = convert
-FLAGS = -Wall -Wextra -Werror
+SRC = main.cpp Base.cpp A.cpp B.cpp C.cpp
+NAME = dynamic
+FLAGS = -Wall -Wextra -Werror -O3
 
 all: $(NAME)
 
